app/assets/stylesheets/custom.css.scss
@import "bootstrap";
@import "bootstrap-responsive";

/* mixins, variables, etc. */

$grayMediumLight: #eaeaea;

@mixin box_sizing {
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

@viewport {
  width: device-width;
}

/* universal */

html {
  overflow-y: scroll;
}

body {
  padding-top: 60px;
}

.container {
  max-width: 940px;
}

section {
  overflow: auto;
}

textarea {
  resize: vertical;
}

.center {
  text-align: center;
  h1 {
    margin-bottom: 10px;
  }
}

.span3 {
  width: 27.3003vw;
}

.container {
  width: 95.0455vw;
}

/* typography */

h1, h2, h3, h4, h5, h6 {
  line-height: 1;
}

h1 {
  font-size: 3em;
  font-size: 3.5vw;
  letter-spacing: -2px;
  letter-spacing: -.2vw;
  margin-bottom: 30px;
  text-align: center;
}

.center h1 {
  margin-bottom: 1vw;
}

h2 {
  font-size: 1.7em;
  font-size: 2vw;
  letter-spacing: -1px;
  letter-spacing: -.1vw;
  margin-bottom: 30px;
  text-align: center;
  font-weight: normal;
  color: $grayLight;
}

p {
  font-size: 1.1em;
  line-height: 1.7em;
}

/* following sections prevent responsive fonts from getting too big or too small */

@media screen and (min-width: 940px) {
  h1 { font-size: 3em;
  }
  h2 { font-size: 1.7em;
  }
}

@media screen and (min-width: 989px) {
  .span3 {
  width: 270px;
  }
  .container {
  width: 940px;
  }
}

@media screen and (max-width: 500px) {
  h1 { font-size: 1.5em;
  }
  h2 { font-size: 1em;
  }
}

/* following removes the 60px of body padding which pushes everything down an extra 60px at narrower screen widths*/

@media screen and (max-width: 979px) {
  body { padding-top: 0px;
  }
  .navbar-inner {
        margin: 0px;
      }
}

/* header */

#logo {
  float: left;
  margin-right: 10px;
  font-size: 1.7em;
  color: white;
  text-transform: uppercase;
  letter-spacing: -1px;
  padding-top: 9px;
  font-weight: bold;
  line-height: 1;
  &:hover {
    color: white;
    text-decoration: none;
  }
}

/* footer */

footer {
  margin-top: 45px;
  padding-top: 5px;
  border-top: 1px solid $grayMediumLight;
  color: $grayLight;
  a {
    color: $gray;
    &:hover { 
      color: $grayDarker;
    }
  }  
  small { 
    float: left; 
  }
  ul {
    float: right;
    list-style: none;
    li {
      float: left;
      margin-left: 10px;
    }
  }
}

/* Center align the text within the three columns below the carousel */
    .marketing .span3 {
      text-align: center;
    }
    .marketing h2 {
      font-weight: normal;
    }
    .marketing .span3 p {
      margin-left: 10px;
      margin-right: 10px;
    }

/* forms */

input, textarea, select, .uneditable-input {
  border: 1px solid #bbb;
  width: 100%;
  padding: 10px;
  margin-bottom: 15px;
  @include box_sizing;
}

input {
  height: auto !important;
}

#error_explanation {
  color: #f00;
  ul {
    list-style: none;
    margin: 0 0 18px 0;
  }
}

.field_with_errors {
  @extend .control-group;
  @extend .error;
}

/* miscellaneous */

.debug_dump {
  clear: both;
  float: left;
  width: 100%;
  margin-top: 45px;
  @include box_sizing;
}

    /*@media (max-width: 767px) {

      .navbar-inner {
        margin: -20px;
      }

      .carousel {
        margin-left: -20px;
        margin-right: -20px;
      }
      .carousel .container {

      }
      .carousel .item {
        height: 300px;
      }
      .carousel img {
        height: 300px;
      }
      .carousel-caption {
        width: 65%;
        padding: 0 70px;
        margin-top: 100px;
      }
      .carousel-caption h1 {
        font-size: 30px;
      }
      .carousel-caption .lead,
      .carousel-caption .btn {
        font-size: 18px;
      }

      .marketing .span3 + .span3 {
        margin-top: 40px;
      }

      .featurette-heading {
        font-size: 30px;
      }
      .featurette .lead {
        font-size: 18px;
        line-height: 1.5;
      }

    }*/

/* index pages for viewing all class members */

.class-index {
  list-style: none;
  margin: 0;
  li {
    overflow: auto;
    padding: 10px 0;
    border-top: 1px solid $grayLighter;
    &:last-child {
      border-bottom: 1px solid $grayLighter;
    }
  }
}

/* Merchant and Promotions new and edit pages */

select {
  padding: 3px;
}
select#promotion_start_date_1i,  select#promotion_start_date_2i, select#promotion_start_date_3i, select#promotion_end_date_1i,  select#promotion_end_date_2i, select#promotion_end_date_3i {
  width: 110px;
}

/* FAQ */

.fa-plus-square, .fa-minus-square-o, .question {
  cursor: pointer;
}

.question-group, .contact-message, .contact-message label, .contact-message input, .contact-message textarea {
  font-size: 1.2em;
}

.answer {
  margin-top: 10px;
}

.grey {
  color: grey;
}

#contact-us-form label, #contact-us-form input, #contact-us-form textarea {
  line-height: 18px;
  font-size: 1.0em;
}

